# LanguageModel

./: .pre-commit-config.yaml  .pylintrc  pyproject.toml
languagemodel/: explore.py
languagemodel/context/: data_context.py
pretrain/: encode_entrypoint.txt  inference.txt  model_context.txt  train_job.txt  training_entrypoint.txt
scripts/: job.json  train_job.txt
tests/: test_data_context.py
