[tool.poetry]
name = "languagemodel"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ray = {extras = ["data", "serve", "train", "tune"], version = "^2.11.0"}
torch = "^2.2.2"
flax = "^0.8.2"
black = "^24.4.2"
pytest = "^8.2.0"
pre-commit = "^3.7.0"
pylint = "^3.1.0"
pdoc = "^14.4.0"
tyro = "^0.8.4"
fire = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
